--- a/pages/HTML/resultaten.html
+++ b/pages/HTML/resultaten.html
@@ -7,7 +7,8 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../../styles/initialize.css">;
     <link href="https://db.onlinewebfonts.com/c/a5e88382f630f5489da535b2471fc7b0?family=Arame-Stencil" rel="stylesheet">
-    <title>Resultaten</title>
+    <title>VECTORIUM | Resultaten</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../../assets/Vectorium Logo Klein Blauw.png" >
     <style>
         body {
             font-family: Arial, sans-serif;
