--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="library.css">
-    <title>Placeholder | Library</title>
+    <title>VECTORIUM | Bibliotheek</title>
     <script src="../JS/functions.js"></script>
     <link href="https://db.onlinewebfonts.com/c/a5e88382f630f5489da535b2471fc7b0?family=Arame-Stencil" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="../../assets/Vectorium Logo Klein Blauw.png" >
 </head>
 
 <body>
