--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -202,7 +202,7 @@
 
     <div class="container">
         <h1 style="color: #007bff; font-family: Arame-Stencil;">ALLE LESSEN</h1>
-        <div class="lesson" id="lessonehc">
+        <div class="lesson" id="lessoneh">
             <div class="icon">
                 <img src="../../assets/Vectorium Logo Klein Blauw.png" width="64" height="64">
             </div>
@@ -211,8 +211,9 @@
                 <p>Deze les gaat over <b>de eenheidscirkel.</b></p>
                 <span>In deze les wordt de eenheidscirkel door</span>
                 <br><span>middel van een interactief plaatje duidelijk gemaakt.</span>
+                <br><b></b>
                 <p id="completionMessage" style="display: none;"></p>
-                <button class="knop" id="lesson-button">START</button>
+                <button class="knop" id="lesson-button" disabled style="cursor: not-allowed;">NOG IN ONTWIKKELING</button>
             </div>
         </div>
 
