--- a/pages/HTML/theorie-2.1.html
+++ b/pages/HTML/theorie-2.1.html
@@ -217,33 +217,20 @@
             </ul>
         </div>
         <div class="content">
-            <h1>Welkom bij pagina 2 over de Eenheidscirkel.</h1>
-            <p>Hier kunnen we de Theorie die is aangeklikt laten zien met het menu voor alle theorie op dezelfde pagina.</p>
-            <p>We hebben hier dan gewoon een algemene theorie pagina en als je categorie aanklikt blijft het menu wel nog.</p>
-            <p>Ook hebben de pills een hover dat je kan zien waar je je muis hebt. Is dit een beetje wat je bedoelde?</p>
+            <h1>Welkom bij pagina 1 over raaklijnen.</h1>
+            <p><br>Heb je deze Theorie onder de knie? Klik op de pijl om door te gaan met raaklijnen.</p>
             <div class="buttons">
                 <!-- Modal Bijlage -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Zie de
-                    bijlage</button>
-
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Zie de
-                    bijlage</button>
-                    <a onclick="open_theorie(8.2)" id="next-arrow" class="arrow-button">&#x2192;</a>
-                    <a onclick="open_theorie(8.1)" id="previous-arrow" class="arrow-button">&#x2190;</a>
-    
-                <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-lg">
-                        <div class="modal-content">
-                            <img src="../../assets/theorie-8.1-A2.png">
-                        </div>
-                </div>
+                    <a onclick="open_theorie(2.2)" id="next-arrow" class="arrow-button">&#x2192;</a>
+                    <a onclick="open_theorie(2.1)" id="previous-arrow" class="arrow-button">&#x2190;</a>                
             </div>
-            <p><br>Uitleg</p>
-            <p>Uitleg</p>
-            <p>Uitleg</p>
+            <p>Een raaklijn is een lijn die een grafiek maar op één plek raakt. Een raaklijn snijdt de grafiek dus niet in het punt,</p>
+            <p>maar komt maar op een klein stuk overeen met de grafiek. Als je van deze raaklijn de richtingscoëfficient berekend,</p>
+            <p>weet je de snelheid die de grafiek heeft op het punt waar de raaklijn de grafiek raakt.</p>
+            <img src="../../assets/raaklijn/theorie-2.1.png" style="width: 900px; height: 250px;">
         </div>
     </div>
+
 
     <!--Script for Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
