--- a/pages/HTML/theorie-2.2.html
+++ b/pages/HTML/theorie-2.2.html
@@ -217,33 +217,24 @@
             </ul>
         </div>
         <div class="content">
-            <h1>Welkom bij pagina 2 over de Eenheidscirkel.</h1>
-            <p>Hier kunnen we de Theorie die is aangeklikt laten zien met het menu voor alle theorie op dezelfde pagina.</p>
-            <p>We hebben hier dan gewoon een algemene theorie pagina en als je categorie aanklikt blijft het menu wel nog.</p>
-            <p>Ook hebben de pills een hover dat je kan zien waar je je muis hebt. Is dit een beetje wat je bedoelde?</p>
+            <h1>Welkom bij pagina 2 over raaklijnen.</h1>
+            <p><br>Heb je deze Theorie onder de knie? Klik op de pijl om door te gaan met raaklijnen.</p>
             <div class="buttons">
                 <!-- Modal Bijlage -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Zie de
-                    bijlage</button>
-
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Zie de
-                    bijlage</button>
-                    <a onclick="open_theorie(8.2)" id="next-arrow" class="arrow-button">&#x2192;</a>
-                    <a onclick="open_theorie(8.1)" id="previous-arrow" class="arrow-button">&#x2190;</a>
-    
-                <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-lg">
-                        <div class="modal-content">
-                            <img src="../../assets/theorie-8.1-A2.png">
-                        </div>
-                </div>
+                    <a onclick="open_theorie(2.2)" id="next-arrow" class="arrow-button">&#x2192;</a>
+                    <a onclick="open_theorie(2.1)" id="previous-arrow" class="arrow-button">&#x2190;</a>                
             </div>
-            <p><br>Uitleg</p>
-            <p>Uitleg</p>
-            <p>Uitleg</p>
+            <p><br>Om een raaklijn te gebruiken is het nodig om te weten op welke coördinaten deze raaklijn de grafiek raakt.</p>
+            <p>Als je deze coördinaten namelijk invult in onderstaande formule, krijg je zowel de richtingscoëfficient van de raaklijn,</p>
+            <p>maar ook, zoals in vorige theorie behandeld is, de snelheid op dat punt in de grafiek. Dit wordt ook wel de helling van</p>
+            <p>de grafiek in punt A.</p>
+            <div class="foto">
+                <img src="../../assets/raaklijn/theorie-2.2.1.png" style="width: 500px; height: 215px;">
+                <img src="../../assets/raaklijn/theorie-2.2.2.png" style="width: 350px;">
+            </div>
         </div>
     </div>
+
 
     <!--Script for Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
