--- a/pages/HTML/theorie-10.2.html
+++ b/pages/HTML/theorie-10.2.html
@@ -209,7 +209,7 @@
                     <a class="nav-link" href="theorie-8.1.html">Eenheidscirkel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Raaklijnen</a>
+                    <a class="nav-link" href="theorie-2.1.html">Raaklijnen</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="theorie-10.1.html">Vectoren</a>
