--- a/example.html
+++ b/example.html
@@ -11,7 +11,7 @@
     <!--  -->
 
     <link rel="stylesheet" href="./pages/CSS/index.css">
-    <title>Placeholder | ...</title>
+    <title>VECTORIUM | ...</title>
 </head>
 
 <body>
