--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                                         placeholder="Email">
                                     <input type="password" id="registerPasswordInput" class="form-control mb-3"
                                         placeholder="Wachtwoord">
+                                    <p>Het wachtwoord moet minimaal 6 letters bevatten</p>
                                     <button id="registerSubmitButton" class="btn btn-primary w-100">Registreren</button>
                                 </div>
                             </div>
@@ -113,7 +114,6 @@
                                                     id="logoutButton2">Uitloggen</a>
                                             </div>
                                         </div>
-                                        <!-- Main Content Area -->
                                         <div class="col-md-8">
                                             <div class="tab-content">
                                                 <!-- Account Details Section -->
@@ -264,12 +264,12 @@
 
       <style>
         .text-center {
-  animation: fade-in 0.8s linear;
-}
-@keyframes fade-in {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
+            animation: fade-in 0.8s linear;
+            }
+            @keyframes fade-in {
+            from { opacity: 0; }
+            to { opacity: 1; }
+            }
       </style>
 
           <div id="snackbar"></div>
