--- a/pages/HTML/hoewerkthet.html
+++ b/pages/HTML/hoewerkthet.html
@@ -8,12 +8,12 @@
     <!-- Script for Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../styles/initialize.css">;
-    <!--  -->
+    <link rel="stylesheet" href="../../styles/initialize.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../../assets/Vectorium Logo Klein Blauw.png" >
 
     <link rel="stylesheet" href="./pages/CSS/index.css">
     <link href="https://db.onlinewebfonts.com/c/a5e88382f630f5489da535b2471fc7b0?family=Arame-Stencil" rel="stylesheet">
-    <title>Placeholder | ...</title>
+    <title>VECTORIUM | Hoe werkt het?</title>
 </head>
 
 <body>
@@ -242,8 +242,6 @@
 
       <style>
         body {
-          font-family: Arial, sans-serif;
-          line-height: 1.6;
           margin: 0;
           padding: 0;
           background-color: #f8f9fa;
