--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -8,7 +8,7 @@
     <!-- Script for Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="library.css">
+    <link rel="stylesheet" href="../../styles/library.css">
     <title>VECTORIUM | Bibliotheek</title>
     <script src="../JS/functions.js"></script>
     <link href="https://db.onlinewebfonts.com/c/a5e88382f630f5489da535b2471fc7b0?family=Arame-Stencil" rel="stylesheet">
@@ -45,7 +45,7 @@
                     
                     <div class="d-flex justify-content-end">
                         <div class="btn-group">
-                        <!-- Account Dropdown (shown when logged in) -->
+                        <!-- Account Dropdown -->
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="accountDropdown"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Account
@@ -201,13 +201,13 @@
 
 
     <div class="container">
-        <h1 style="color: #007bff; font-family: Arame-Stencil;">ALLE LESSEN</h1>
+        <h1 style="color: #007bff; font-family: Arame-Stencil;">ALLE ONDERWERPEN</h1>
         <div class="lesson" id="lessoneh">
             <div class="icon">
                 <img src="../../assets/Vectorium Logo Klein Blauw.png" width="64" height="64">
             </div>
             <div class="content">
-                <h2>Les #1</h2>
+                <h2>Eenheidscirkel</h2>
                 <p>Deze les gaat over <b>de eenheidscirkel.</b></p>
                 <span>In deze les wordt de eenheidscirkel door</span>
                 <br><span>middel van een interactief plaatje duidelijk gemaakt.</span>
@@ -222,7 +222,7 @@
                 <img src="../../assets/Vectorium Logo Klein Blauw.png" width="64" height="64">
             </div>
             <div class="content">
-                <h2>Les #2</h2>
+                <h2>Raaklijnen</h2>
                 <p>Deze les gaat over <b>de raaklijn</b></p>
                 <span>Deze les behandelt de kunst van de raaklijn.</span>
                 <br><span>Hoe werkt dit en wat kan je ermee?</span>
@@ -235,7 +235,7 @@
                 <img src="../../assets/Vectorium Logo Klein Blauw.png" width="64" height="64">
             </div>
             <div class="content">
-                <h2>Les #3</h2>
+                <h2>Vectoren</h2>
                 <p>Deze les gaat over <b>vectoren</b></p>
                 <span>In deze les wordt het ingewikkelde onderwerp van vectoren besproken, waarmee je van punt A naar punt B kan gaan. Maar hoe werkt het nou eigenlijk?</span>
                 <button class="knop" id="lesson-button">START</button>
@@ -254,7 +254,7 @@
             </div>
         </div>
         
-        <h1 class="text-center">Meer lessen volgen later..</h1>
+        <h1 class="text-center">Meer onderwerpen volgen later..</h1>
     </div>
     </div>
 
@@ -271,10 +271,4 @@
         crossorigin="anonymous"></script>
     <script type="module" src="../JS/library.js"></script>
 </body>
-
-
-
-
-</script>
-
 </html>
