--- a/pages/HTML/resultaten.html
+++ b/pages/HTML/resultaten.html
@@ -295,7 +295,7 @@
             </div>
         </div>
         <br>
-        <button type="button" id="library" class="btn btn-primary">Terug naar Library</button>
+        <button type="button" id="library" class="btn btn-primary">Terug naar Bibliotheek</button>
         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
             Opnieuw maken
           </button>
