--- a/pages/HTML/theorie-10.1.html
+++ b/pages/HTML/theorie-10.1.html
@@ -217,7 +217,7 @@
             </ul>
         </div>
         <div class="content">
-            <h1>Welkom bij pagina 1 over Vectoren.</h1>
+            <h1>Vectoren</h1>
             <p><br>Heb je deze Theorie onder de knie? Klik op de pijl om door te gaan met vectoren.</p>
             <div class="buttons">
                 <!-- Modal Bijlage -->
