--- a/pages/HTML/theorie-2.2.html
+++ b/pages/HTML/theorie-2.2.html
@@ -217,7 +217,7 @@
             </ul>
         </div>
         <div class="content">
-            <h1>Welkom bij pagina 2 over raaklijnen.</h1>
+            <h1>Raaklijnen</h1>
             <p><br>Heb je deze Theorie onder de knie? Klik op de pijl om door te gaan met raaklijnen.</p>
             <div class="buttons">
                 <!-- Modal Bijlage -->
