--- a/pages/HTML/theorie-8.1.html
+++ b/pages/HTML/theorie-8.1.html
@@ -217,27 +217,20 @@
             </ul>
         </div>
         <div class="content">
-            <h1>Welkom bij pagina 1 over de Eenheidscirkel.</h1>
+            <h1>Eenheidscirkel.</h1>
             <p>Zie de bijlage voor de bijbehorende Theorie. Op deze pagina wordt bijlage uitgelegd.</p>
             <p>Heb je deze Theorie onder de knie? Klik op volgende om door te gaan met de eenheidscirkel.</p>
             <div class="buttons">
                 <!-- Modal Bijlage -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Zie de
-                    bijlage</button>
                     <a onclick="open_theorie(8.2)" id="next-arrow" class="arrow-button">&#x2192;</a>
                     <a onclick="open_theorie(8.1)" id="previous-arrow" class="arrow-button">&#x2190;</a>
 
-                <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-lg">
-                        <div class="modal-content">
-                            <img src="../../assets/theorie-8.1-A.png">
-                        </div>
-                </div>
-            </div>
-            <p><br>Uitleg</p>
-            <p>Uitleg</p>
-            <p>Uitleg</p>
+            <br>
+            <p>
+                De cirkel met middelpunt O(0, 0) en straal 1 heet de eenheidscirkel. Het punt P beweegt over de eenheidscirkel en begint in het punt A(1, 0), zie figuur 8.3.
+                <br> Hierdoor ontstaat hoek AOP die we de draaiingshoek van P noemen. We geven deze hoek aan met a. Het eerste been van een draaiingshoek is altijd de positieve x-as, het
+                tweede been gaat door het punt P.
+                <br>Draait P tegen de wijzers van de klok in, dan is a positief, draait P met de wijzers van de klok mee, dan is a negatief.</p>
             <img src="../../assets/theorie-8.1-A.png">
         </div>
     </div>
