--- a/pages/HTML/theorie-8.2.html
+++ b/pages/HTML/theorie-8.2.html
@@ -217,31 +217,13 @@
             </ul>
         </div>
         <div class="content">
-            <h1>Welkom bij pagina 2 over de Eenheidscirkel.</h1>
-            <p>Hier kunnen we de Theorie die is aangeklikt laten zien met het menu voor alle theorie op dezelfde pagina.</p>
-            <p>We hebben hier dan gewoon een algemene theorie pagina en als je categorie aanklikt blijft het menu wel nog.</p>
-            <p>Ook hebben de pills een hover dat je kan zien waar je je muis hebt. Is dit een beetje wat je bedoelde?</p>
+            <h1>Eenheidscirkel</h1>
             <div class="buttons">
                 <!-- Modal Bijlage -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Zie de
-                    bijlage</button>
-
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Zie de
-                    bijlage</button>
+                <img src="../../assets/eenheidscirkel/theorie2.png">
                     <a onclick="open_theorie(8.2)" id="next-arrow" class="arrow-button">&#x2192;</a>
                     <a onclick="open_theorie(8.1)" id="previous-arrow" class="arrow-button">&#x2190;</a>
-    
-                <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-lg">
-                        <div class="modal-content">
-                            <img src="../../assets/theorie-8.1-A2.png">
-                        </div>
-                </div>
             </div>
-            <p><br>Uitleg</p>
-            <p>Uitleg</p>
-            <p>Uitleg</p>
         </div>
     </div>
 
