--- a/pages/HTML/contact.html
+++ b/pages/HTML/contact.html
@@ -8,13 +8,14 @@
     <!-- Script for Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../styles/initialize.css">;
+    <link rel="stylesheet" href="../../styles/initialize.css">
     <!--  -->
 
     <link rel="stylesheet" href="./pages/CSS/index.css">
     <script src="../JS/functions.js"></script>
     <link href="https://db.onlinewebfonts.com/c/a5e88382f630f5489da535b2471fc7b0?family=Arame-Stencil" rel="stylesheet">
-    <title>Contact</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../../assets/Vectorium Logo Klein Blauw.png" >
+    <title>VECTORIUM | Contact</title>
 </head>
 
 <body>
@@ -211,7 +212,7 @@
 
     <div style="display: flex; justify-content: space-evenly;">
         <div class="card" style="width: 18rem;">
-            <img src="../../assets/photo1.png" class="card-img-top" alt="...">
+            <img src="../../assets/Jelte.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Jelte Jonker</h5>
               <p class="card-text">Leerling Christelijk Lyceum Apeldoorn.</p>
@@ -224,7 +225,7 @@
           </div>
           
         <div class="card" style="width: 18rem;">
-            <img src="../../assets/photo2.png" class="card-img-top" alt="...">
+            <img src="../../assets/Olivier.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Olivier Timmerman</h5>
               <p class="card-text">Leerling Christelijk Lyceum Apeldoorn.</p>
